--- a/src/assets/CSS/Components/PageTitle.css
+++ b/src/assets/CSS/Components/PageTitle.css
@@ -1,8 +1,4 @@
 .PageTitle {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-
     height: 5vh;
     max-width: 95vw;
     margin: 20px auto;
@@ -10,6 +6,14 @@
     border-radius: var(--border-radius-1);
     background-color: var(--clr-primary-4);
     color: #ffffff;
+}
+.title-text {
+    height: inherit;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    /* background-color: rebeccapurple; */
+
 }
 .subTitle {
     display: flex;
