--- a/src/assets/CSS/Pages/Classes.css
+++ b/src/assets/CSS/Pages/Classes.css
@@ -1,4 +1,5 @@
 /* All Classes */
+
 .allClasses {
     margin: 5vh auto;
     display: grid;
@@ -9,7 +10,8 @@
     padding: 0 2rem;
     border-radius: var(--border-radius-2);
     cursor: pointer;
-    background-color: aqua;
+    background: #e0e5ec;
+    box-shadow: 9px 9px 16px rgb(163,177,198,0.6), -9px -9px 16px    rgba(255,255,255, 0.5);
 }
 .classTitle,
 .classDetails {
