--- a/src/App.css
+++ b/src/App.css
@@ -137,3 +137,14 @@ input[type=file]{
 .submit {
   background-color: var(--button-color);
 }
+
+
+/* Profile Image */
+.profileImg {
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  margin: 0 auto;
+  display: block;
+  object-fit: cover;
+}
